Keep catalog edits and deletes in step with S3 and MySQL.
Admin classification writes patch staged JSON before the row, deletes remove hosted audio/cover then JSON then MySQL, and import will not roll a later catalog write back.